--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.seedstack.poms</groupId>
         <artifactId>parent-internal</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
+        <version>3.0.0</version>
     </parent>
 
     <groupId>org.seedstack.addons.datasecurity</groupId>
@@ -22,7 +22,7 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
-        <seed.version>3.0.0-SNAPSHOT</seed.version>
+        <seed.version>3.0.0</seed.version>
 
         <compatibility.skip>true</compatibility.skip>
 
